crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__dead_code__recursive__cleanup_dead_delay_capture.snap
---
source: crates/nash-codegen/src/optimizer_tests/dead_code.rs
assertion_line: 453
expression: "crate::harness::pass_snapshot(b.arena, before,\nformat!(\"--- core before\\n{}\\n--- core after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(after), candidate.result, candidate.logs))"
---
--- unoptimized Core
let capture#1 : @delay int = delay error in
letrec
  dead#2 : int -> int [static []] = \x#3 : int -> let anf#4 : int = force capture#1 in
  let anf#5 : int = force capture#1 in
  addInteger anf#4 anf#5
in
42
--- unoptimized UPLC
(program 1.1.0
  [(lam capture_1
    [(lam dead_2 (con integer 42))
      [(lam self_6 [self_6 self_6])
        (lam self_6
          (lam x_3
            [(lam anf_4 [(lam anf_5 [[(builtin addInteger) anf_4] anf_5]) (force capture_1)])
              (force capture_1)]))]])
    (delay (error))])
--- optimized Core
42
--- optimized UPLC
(program 1.1.0 (con integer 42))
--- isolated pass
--- core before
let capture#1 : @delay int = delay error in
letrec
  dead#2 : int -> int [static []] = \x#3 : int -> let anf#4 : int = force capture#1 in
  let anf#5 : int = force capture#1 in
  addInteger anf#4 anf#5
in
42
--- core after
42
--- result
(con integer 42)
--- logs
[]
