crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__dead_code__recursive__cold_reference.snap
---
source: crates/nash-codegen/src/optimizer_tests/dead_code.rs
assertion_line: 68
expression: "crate::harness::pass_snapshot(b.arena, before,\nformat!(\"--- core before\\n{}\\n--- uplc before\\n{}\\n--- core after\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), baseline.uplc, pretty(after), candidate.uplc,\ncandidate.result, candidate.logs))"
---
--- unoptimized Core
letrec
  outer#1 : int -> int [static []] = \x#3 : int -> error
in
case@Bool true of
  True -> 42
  False -> outer#1 0
--- unoptimized UPLC
(program 1.1.0
  [(lam outer_1 (case (con bool True) [outer_1 (con integer 0)] (con integer 42)))
    [(lam self_2 [self_2 self_2]) (lam self_2 (lam x_3 (error)))]])
--- optimized Core
42
--- optimized UPLC
(program 1.1.0 (con integer 42))
--- isolated pass
--- core before
letrec
  outer#1 : int -> int [static []] = \x#3 : int -> error
in
case@Bool true of
  True -> 42
  False -> outer#1 0
--- uplc before
(program 1.1.0
  [(lam outer_1 (case (con bool True) [outer_1 (con integer 0)] (con integer 42)))
    [(lam self_13 [self_13 self_13]) (lam self_13 (lam x_3 (error)))]])
--- core after
letrec
  outer#1 : int -> int [static []] = \x#3 : int -> error
in
case@Bool true of
  True -> 42
  False -> outer#1 0
--- uplc after
(program 1.1.0
  [(lam outer_1 (case (con bool True) [outer_1 (con integer 0)] (con integer 42)))
    [(lam self_15 [self_15 self_15]) (lam self_15 (lam x_3 (error)))]])
--- result
(con integer 42)
--- logs
[]
