crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__dead_code__recursive__lambda_capture.snap
---
source: crates/nash-codegen/src/optimizer_tests/dead_code.rs
assertion_line: 68
expression: "crate::harness::pass_snapshot(b.arena, before,\nformat!(\"--- core before\\n{}\\n--- uplc before\\n{}\\n--- core after\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), baseline.uplc, pretty(after), candidate.uplc,\ncandidate.result, candidate.logs))"
---
--- unoptimized Core
(letrec
  f#1 : int -> int -> int [static []] = \x#3 : int y#4 : int -> addInteger x#3 y#4
  dead#2 : int -> int [static []] = \z#5 : int -> error
in
\p#56 : int -> f#1 40 p#56) 2
--- unoptimized UPLC
(program 1.1.0
  [[(lam dispatch_6
    [(lam f_1
      [(lam dead_2 (lam p_56 [[f_1 (con integer 40)] p_56]))
        (lam z_16 [dispatch_6 (constr 1 dispatch_6 z_16)])])
      (lam x_17 (lam y_18 [dispatch_6 (constr 0 dispatch_6 x_17 y_18)]))])
    (lam request_7
      (case
        request_7
        (lam self_8 (lam x_3 (lam y_4 [[(builtin addInteger) x_3] y_4])))
        (lam self_12 (lam z_5 (error)))))]
    (con integer 2)])
--- optimized Core
letrec
  f#6 : int -> int -> int [static []] = \x#8 : int y#9 : int -> addInteger x#8 y#9
in
f#6 40 2
--- optimized UPLC
(program 1.1.0
  [(lam f_11 [[f_11 (con integer 40)] (con integer 2)])
    [(lam self_4 [self_4 self_4])
      (lam self_5 (lam x_7 (lam y_10 [[(builtin addInteger) x_7] y_10])))]])
--- isolated pass
--- core before
(letrec
  f#1 : int -> int -> int [static []] = \x#3 : int y#4 : int -> addInteger x#3 y#4
  dead#2 : int -> int [static []] = \z#5 : int -> error
in
\p#56 : int -> f#1 40 p#56) 2
--- uplc before
(program 1.1.0
  [[(lam dispatch_57
    [(lam f_1
      [(lam dead_2 (lam p_56 [[f_1 (con integer 40)] p_56]))
        (lam z_67 [dispatch_57 (constr 1 dispatch_57 z_67)])])
      (lam x_68 (lam y_69 [dispatch_57 (constr 0 dispatch_57 x_68 y_69)]))])
    (lam request_58
      (case
        request_58
        (lam self_59 (lam x_3 (lam y_4 [[(builtin addInteger) x_3] y_4])))
        (lam self_63 (lam z_5 (error)))))]
    (con integer 2)])
--- core after
(letrec
  f#1 : int -> int -> int [static []] = \x#3 : int y#4 : int -> addInteger x#3 y#4
in
\p#56 : int -> f#1 40 p#56) 2
--- uplc after
(program 1.1.0
  [[(lam f_1 (lam p_56 [[f_1 (con integer 40)] p_56]))
    [(lam self_70 [self_70 self_70])
      (lam self_70 (lam x_3 (lam y_4 [[(builtin addInteger) x_3] y_4])))]]
    (con integer 2)])
--- result
(con integer 42)
--- logs
[]
