crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__dead_code__recursive__nested_live_capture.snap
---
source: crates/nash-codegen/src/optimizer_tests/dead_code.rs
assertion_line: 68
expression: "crate::harness::pass_snapshot(b.arena, before,\nformat!(\"--- core before\\n{}\\n--- uplc before\\n{}\\n--- core after\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), baseline.uplc, pretty(after), candidate.uplc,\ncandidate.result, candidate.logs))"
---
--- unoptimized Core
letrec
  outer#1 : int -> int [static []] = \x#3 : int -> x#3
in
letrec
  inner#2 : int -> int [static []] = \y#4 : int -> outer#1 y#4
in
inner#2 42
--- unoptimized UPLC
(program 1.1.0
  [(lam outer_1
    [(lam inner_2 [inner_2 (con integer 42)])
      [(lam self_5 [self_5 self_5]) (lam self_5 (lam y_4 [outer_1 y_4]))]])
    [(lam self_7 [self_7 self_7]) (lam self_7 (lam x_3 x_3))]])
--- optimized Core
letrec
  outer#5 : int -> int [static []] = \x#6 : int -> x#6
in
letrec
  inner#7 : int -> int [static []] = \y#8 : int -> outer#5 y#8
in
inner#7 42
--- optimized UPLC
(program 1.1.0
  [(lam outer_12
    [(lam inner_16 [inner_16 (con integer 42)])
      [(lam self_13 [self_13 self_13]) (lam self_14 (lam y_15 [outer_12 y_15]))]])
    [(lam self_9 [self_9 self_9]) (lam self_10 (lam x_11 x_11))]])
--- isolated pass
--- core before
letrec
  outer#1 : int -> int [static []] = \x#3 : int -> x#3
in
letrec
  inner#2 : int -> int [static []] = \y#4 : int -> outer#1 y#4
in
inner#2 42
--- uplc before
(program 1.1.0
  [(lam outer_1
    [(lam inner_2 [inner_2 (con integer 42)])
      [(lam self_5 [self_5 self_5]) (lam self_5 (lam y_4 [outer_1 y_4]))]])
    [(lam self_7 [self_7 self_7]) (lam self_7 (lam x_3 x_3))]])
--- core after
letrec
  outer#1 : int -> int [static []] = \x#3 : int -> x#3
in
letrec
  inner#2 : int -> int [static []] = \y#4 : int -> outer#1 y#4
in
inner#2 42
--- uplc after
(program 1.1.0
  [(lam outer_1
    [(lam inner_2 [inner_2 (con integer 42)])
      [(lam self_9 [self_9 self_9]) (lam self_9 (lam y_4 [outer_1 y_4]))]])
    [(lam self_11 [self_11 self_11]) (lam self_11 (lam x_3 x_3))]])
--- result
(con integer 42)
--- logs
[]
