crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__dead_code__recursive__reachable_failure.snap
---
source: crates/nash-codegen/src/optimizer_tests/dead_code.rs
expression: "crate::harness::pass_snapshot(b.arena, before,\nformat!(\"--- core before\\n{}\\n--- uplc before\\n{}\\n--- core after\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), baseline.uplc, pretty(after), candidate.uplc,\ncandidate.result, candidate.logs))"
---
--- unoptimized Core
letrec
  f#1 : int -> int [static []] = \x#2 : int -> trace "failure" in error
in
f#1 42
--- unoptimized UPLC
(program 1.1.0
  [(lam f_1 [f_1 (con integer 42)])
    [(lam self_3 [self_3 self_3])
      (lam self_3
        (lam x_2
          (force [[(force (builtin trace)) (con string "failure")] (delay (error))])))]])
--- optimized Core
letrec
  f#3 : @delay int [static []] = \ -> delay (trace "failure" in error)
in
force f#3
--- optimized UPLC
(program 1.1.0
  [(lam builtin_6
    [(lam f_5 (force f_5))
      [(lam self_2 [self_2 self_2])
        (lam self_4
          (delay (force [[builtin_6 (con string "failure")] (delay (error))])))]])
    (force (builtin trace))])
--- isolated pass
--- core before
letrec
  f#1 : int -> int [static []] = \x#2 : int -> trace "failure" in error
in
f#1 42
--- uplc before
(program 1.1.0
  [(lam f_1 [f_1 (con integer 42)])
    [(lam self_3 [self_3 self_3])
      (lam self_3
        (lam x_2
          (force [[(force (builtin trace)) (con string "failure")] (delay (error))])))]])
--- core after
letrec
  f#1 : int -> int [static []] = \x#2 : int -> trace "failure" in error
in
f#1 42
--- uplc after
(program 1.1.0
  [(lam f_1 [f_1 (con integer 42)])
    [(lam self_5 [self_5 self_5])
      (lam self_5
        (lam x_2
          (force [[(force (builtin trace)) (con string "failure")] (delay (error))])))]])
--- result
error: ExplicitErrorTerm
--- logs
["failure"]
